# Js_Engine

./: .gitignore  BuildProxy.bat  Build_Debug.bat  Build_Release.bat  Build_Release_Proxy.ps1  Build_Release_Proxy_XMake.ps1  CMakeLists.txt  README-EN.md  README.md  build.sh  conanfile.py  dts.js  tooth.json  xmake.lua
.github/ISSUE_TEMPLATE/: bug_report_en.yml  bug_report_zh.yml  feature_request_en.yml  feature_request_zh.yml
.github/workflows/: build.yml
lib/dts/: index.d.ts  tsconfig.json
lib/dts/API/: Actor.d.ts  CommandSender.d.ts  File.d.ts  JSE.d.ts  Permissible.d.ts  Permission.d.ts  Player.d.ts  Plugin.d.ts  PluginDescription.d.ts
lib/dts/API1/Permissions1/: Permissible.d.ts
lib/dts/api/: Logger.d.ts  Player.d.ts
lib/dts/api/actor/: Actor.d.ts  Mob.d.ts
lib/dts/api/command/: Command.d.ts  CommandSender.d.ts
lib/dts/api/jse/: JSE.d.ts
lib/dts/api/permissions/: Permissible.d.ts  Permission.d.ts
lib/dts/api/plugin/: Plugin.d.ts  PluginDescription.d.ts
lib/shortcutApi/: JsonFileConfig.d.ts  JsonFileConfig.js
patch/: logger.h
scripts/: install_env.sh  pull_deps.ps1
src/: Entry.cc  Entry.h
src/API/: APIHelper.cc  APIHelper.h  ActorAPI.cc  ActorAPI.h  CommandAPI.cc  CommandAPI.h  CommandSenderAPI.cc  CommandSenderAPI.h  Convert.h  EndStoneAPI.cc  EndStoneAPI.h  EnumAPI.cc  EnumAPI.h  FileAPI.cc  FileAPI.h  JSEAPI.cc  JSEAPI.h  LoggerAPI.cc  LoggerAPI.h  MobAPI.cc  MobAPI.h  PermissibleAPI.cc  PermissibleAPI.h  PermissionAPI.cc  PermissionAPI.h  PlayerAPI.cc  PlayerAPI.h  PluginAPI.cc  PluginAPI.h  PluginDescription.cc  PluginDescription.h  PluginDescriptionAPI.cc  PluginDescriptionAPI.h  ServerAPI.cc  ServerAPI.h
src/API/Actor/: ActorAPI.cc  MobAPI.h
src/API/Command/: CommandAPI.h
src/API/JSE/: EnumAPI.h  FileAPI.cc  JSEAPI.cc  PluginAPI.cc  PluginDescriptionAPI.cc  PluginDescriptionAPI.h
src/API/Permissions/: PermissibleAPI.h  PermissionAPI.cc
src/API1/: LoggerAPI.h  PlayerAPI.cc
src/API1/Actor1/: ActorAPI.h
src/API1/Command1/: CommandAPI.cc
src/API1/JSE1/: EnumAPI.cc  FileAPI.h
src/API1/Permissions1/: PermissibleAPI.cc  PermissionAPI.h
src/Engine/: BindAPI.h  EngineData.h  EngineManager.cc  EngineManager.h  EngineSelfData.h  Using.h
src/Loader/: JavaScriptPlugin.cc  JavaScriptPlugin.h  JavaScriptPluginLoader.cc  JavaScriptPluginLoader.h
src/Loader1/: JavaScriptPlugin.h
src/Manager/: BindAPI.h  EngineData.h  NodeManager.cc  NodeManager.h
src/Manager1/: BindAPI.h  EngineData.h  NodeManager.h
src/Utils/: Convert.h  Defines.h  StringUtils.h  Util.h
src/Utils1/: Convert.h  Defines.h  FileUtils.h  Util.h
src/api/: APIHelper.cc  APIHelper.h  LoggerAPI.cc  LoggerAPI.h  PlayerAPI.cc  PlayerAPI.h  ServerAPI.cc  ServerAPI.h
src/api/actor/: ActorAPI.cc  ActorAPI.h  MobAPI.cc  MobAPI.h
src/api/command/: CommandAPI.cc  CommandAPI.h  CommandSenderAPI.cc  CommandSenderAPI.h
src/api/jse/: EnumAPI.cc  EnumAPI.h  FileAPI.cc  FileAPI.h  JSEAPI.cc  JSEAPI.h  PluginAPI.cc  PluginAPI.h  PluginDescriptionAPI.cc  PluginDescriptionAPI.h
src/api/permissions/: PermissibleAPI.cc  PermissibleAPI.h  PermissionAPI.cc  PermissionAPI.h
src/api/plugin/: PluginAPI.cc  PluginAPI.h  PluginDescriptionAPI.cc  PluginDescriptionAPI.h
src/loader/: JavaScriptPlugin.cc  JavaScriptPluginLoader.cc  JavaScriptPluginLoader.h
src/manager/: BindAPI.h  EngineData.h  NodeManager.cc  NodeManager.h
src/utils/: Convert.h  Using.h
test/: TestLoader.js  b.js  c.js  jsconfig.json  package.json  test_engine.js  test_js_plugin.js
types/: EndStoneAPI.d.ts  JSEAPI.d.ts  LoggerAPI.d.ts  PluginAPI.d.ts  PluginDescriptionAPI.d.ts  index.d.ts  tsconfig.json
types/API/: CommandSender.d.ts  JSE.d.ts  Logger.d.ts  Permissible.d.ts  Plugin.d.ts  PluginDescription.d.ts
